dtvkit-TIS: rename package name [1/2]
PD#SWPL-59278

Problem:
need use com.droidlogic.dtvkit PCK name

Solution:
org.dtvkit to com.droidlogic.dtvkit

Verify:
redi

Change-Id: I69cf56ab2d7a2ae4c3cb2aeb777f5e32a84211c2
Signed-off-by: kieth liu <kieth.liu@amlogic.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.dtvkit.inputsource">
+    package="com.droidlogic.dtvkit.inputsource">
     <uses-feature
         android:name="android.software.live_tv"
         android:required="true" />
@@ -114,14 +114,14 @@
             android:name=".services.CaSettingService"
             android:exported="true">
             <intent-filter android:priority="1">
-                <action android:name="org.dtvkit.inputsource.services.CaSettingService" />
+                <action android:name="com.droidlogic.dtvkit.inputsource.services.CaSettingService" />
             </intent-filter>
         </service>
         <service
             android:name=".service.DtvkitSettingService"
             android:exported="true">
             <intent-filter>
-                <action android:name="org.dtvkit.inputsource.service.DtvkitSettingService" />
+                <action android:name="com.droidlogic.dtvkit.inputsource.service.DtvkitSettingService" />
             </intent-filter>
         </service>
     </application>
