--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "23.0.3"
     defaultConfig {
-        applicationId "org.dtvkit.inputsource"
+        applicationId "com.droidlogic.dtvkit.inputsource"
         minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
